products_service/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: naders-taters-products-api-service
  name: naders-taters-products-api-service
  namespace: default
spec:
  ports:
    - name: 8000-8000
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: naders-taters-products-api-app
  type: LoadBalancer
  externalIPs:
