products_service/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: naders-taters-products-api-deployment
  labels:
    app: naders-taters-products-api-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: naders-taters-products-api-app
  template:
    metadata:
      labels:
        app: naders-taters-products-api-app
    spec:
      containers:
        - name: naders-taters-products-api-app
          image: limpylimbs/naders-taters-products-api:0.7
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: naders-taters-products-api-service
  name: naders-taters-products-api-service
  namespace: default
spec:
  ports:
    - name: 8000-8000
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: naders-taters-products-api-app
  type: LoadBalancer
  externalIPs:
    - 13.57.28.107
    - 172.31.8.169
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: naders-taters-products-api-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: naders-taters-products-api-service
                port:
                  number: 8000
