products_service/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: naders-taters-products-api-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: naders-taters-products-api-service
                port:
                  number: 8000
